--- a/views/contact.pug
+++ b/views/contact.pug
@@ -8,29 +8,30 @@ block content
             .blog-slider__item.swiper-slide
                 .blog-slider__img   
                     img.lazyload.grayscale-img(data-src="/images/guitar.jpg" alt="")
-                .blog-slider__content.contact-width
-                    .blog-slider__title Carl Wallis Music
-                    hr
-                    .blog-slider__text(style="font-size: 1.8em") Get in touch
-                    .contact-icons-page                    
-                        a(href="https://www.facebook.com/carlwallismusic/").flex-contact
-                            .facebook
-                                i.fab.fa-facebook-f
-                                .blog-slider__text Facebook  
-                        a(href="http://m.me/carlwallismusic/")
-                            .facebook-message
-                                i.fas.fa-comments
-                                .blog-slider__text Messenger 
-                        a(href="mailto:c.wallis11@outlook.com?subject=Music Tuition")
-                            .email
-                                i.fas.fa-envelope
-                                .blog-slider__text c.wallis11@outlook.com
-                        a(href="tel:+447884945531")
-                            .phone
-                                i.fas.fa-phone
-                                .blog-slider__text +447884945531
-                        a(href="https://www.youtube.com/user/carl89uk/videos")
-                            .youtube
-                                i.fab.fa-youtube
-                                    .blog-slider__text Youtube
+                span.image-content
+                    .blog-slider__content.contact-width
+                        .blog-slider__title Carl Wallis Music
+                        hr
+                        .blog-slider__text(style="font-size: 1.8em") Get in touch
+                        .contact-icons-page                    
+                            a(href="https://www.facebook.com/carlwallismusic/").flex-contact
+                                .facebook
+                                    i.fab.fa-facebook-f
+                                    div Facebook  
+                            a(href="http://m.me/carlwallismusic/")
+                                .facebook-message
+                                    i.fas.fa-comments
+                                    div Messenger 
+                            a(href="mailto:c.wallis11@outlook.com?subject=Music Tuition")
+                                .email
+                                    i.fas.fa-envelope
+                                    div c.wallis11@outlook.com
+                            a(href="tel:+447884945531")
+                                .phone
+                                    i.fas.fa-phone
+                                    div +447884945531
+                            a(href="https://www.youtube.com/user/carl89uk/videos")
+                                .youtube
+                                    i.fab.fa-youtube
+                                    div Youtube
 
