--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -31,9 +31,10 @@ footer {
   line-height: 45px;
   text-align: center;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-  background: #ffffff;
+  background: rgba(0, 0, 0, 0.7);
   opacity: 0.8;
   border-radius: 1em 1em 0em 0em;
+  color:white;
 
   p, ul {
     margin-bottom: 0;
