--- a/views/home.pug
+++ b/views/home.pug
@@ -1,55 +1,61 @@
 extends layout
 block content
-  - var aosdelay = "0.5"
-  - var aosanimation = "zoom-in-right"
-  - var aosanimation_alt = "zoom-in-left"
+  - var aosdelay = "0.2"
+  - var aosanimation = "zoom-in-up"
+  - var aosanimation_alt = "zoom-in-up"
   .centre
     .blog-slider
         .blog-slider__wrp.swiper-wrapper
             .blog-slider__item.swiper-slide
                 .blog-slider__img   
-                    img.lazyload.grayscale-img(data-src="/images/guitar.jpg" alt="")
-                .blog-slider__content
-                    .blog-slider__title Carl Wallis Music
-                    .contact-icons
-                        a(href="https://www.facebook.com/carlwallismusic/")
-                            .facebook
-                                i.fab.fa-facebook-f
-                        a(href="http://m.me/carlwallismusic/")
-                            .facebook-message
-                                i.fas.fa-comments
-                        a(href="mailto:c.wallis11@outlook.com?subject=Music Tuition")
-                            .email
-                                i.fas.fa-envelope
-                        a(href="tel:+447884945531")
-                            .phone
-                                i.fas.fa-phone
-                        a(href="https://www.youtube.com/user/carl89uk/videos")
-                            .youtube
-                                i.fab.fa-youtube
-                    
-                    .blog-slider__text Professional Music Tuition
-                    .blog-slider__text I am a musician / music teacher offering group and individual lessons based in West Yorkshire. With a background in both popular and classical music I have a broad range of knowledge to help you unleash your full musical potential within a realistic timeframe. 
-                    .blog-slider__text.hidden Perhaps you’ve always wanted to write simple songs on an acoustic guitar, explore the smouldering gypsy swing of Django Reinheirt or dedicate yourself to complex neoclassical shred guitar. Maybe you’ve got a good sense of pitch but always wanted to sing songs in the style of Mariah Carey but couldn't hit the notes.I am happy to work within your capabilities and can also help with vocal technique's such as increasing range and eliminating strain via breathing exercises and posture. I am always open to learning new styles. I have a professional recording equipment if you would like to record your compositions or covers producing top quality stems suited to industry professionals. I can help you gain the best possible takes along with double tracking and harmonising to execute your songs in the required format prior to mixing and mastering. I am familiar with trinity rock and pop and associated board grades 1 to 8 helping with preparation towards exams if you choose to go down the academic route or just want to play for fun. 
+                    img.lazyload(data-src="/images/guitar.jpg" alt="")
+                span.image-content  
+                    span.title Carl Wallis Music
+                    .blog-slider__content
+                        //- .blog-slider__title Carl Wallis Music
+                        .contact-icons
+                            a(href="https://www.facebook.com/carlwallismusic/")
+                                .facebook
+                                    i.fab.fa-facebook-f
+                            a(href="http://m.me/carlwallismusic/")
+                                .facebook-message
+                                    i.fas.fa-comments
+                            a(href="mailto:c.wallis11@outlook.com?subject=Music Tuition")
+                                .email
+                                    i.fas.fa-envelope
+                            a(href="tel:+447884945531")
+                                .phone
+                                    i.fas.fa-phone
+                            a(href="https://www.youtube.com/user/carl89uk/videos")
+                                .youtube
+                                    i.fab.fa-youtube
+                        .blog-slider__text Professional Music Tuition
+                        .blog-slider__text I am a musician / music teacher offering group and individual lessons based in West Yorkshire. With a background in both popular and classical music I have a broad range of knowledge to help you unleash your full musical potential within a realistic timeframe. 
+                        .blog-slider__text.hidden Perhaps you’ve always wanted to write simple songs on an acoustic guitar, explore the smouldering gypsy swing of Django Reinheirt or dedicate yourself to complex neoclassical shred guitar. Maybe you’ve got a good sense of pitch but always wanted to sing songs in the style of Mariah Carey but couldn't hit the notes.I am happy to work within your capabilities and can also help with vocal technique's such as increasing range and eliminating strain via breathing exercises and posture. I am always open to learning new styles. I have a professional recording equipment if you would like to record your compositions or covers producing top quality stems suited to industry professionals. I can help you gain the best possible takes along with double tracking and harmonising to execute your songs in the required format prior to mixing and mastering. I am familiar with trinity rock and pop and associated board grades 1 to 8 helping with preparation towards exams if you choose to go down the academic route or just want to play for fun. 
+                
             .blog-slider__item.swiper-slide
                 .blog-slider__img
-                    img.lazyload.grayscale-img(data-src="/images/piano.jpg" alt="")
-                .blog-slider__content
-                    .blog-slider__text Perhaps you’ve always wanted to write simple songs on an acoustic guitar, explore the smouldering gypsy swing of Django Reinheirt or dedicate yourself to complex neoclassical shred guitar. Maybe you’ve got a good sense of pitch but always wanted to sing songs in the style of Mariah Carey but couldn't hit the notes.
+                    img.lazyload(data-src="/images/piano.jpg" alt="")
+                span.image-content
+                    .blog-slider__content.top-padding
+                        .blog-slider__text Perhaps you’ve always wanted to write simple songs on an acoustic guitar, explore the smouldering gypsy swing of Django Reinheirt or dedicate yourself to complex neoclassical shred guitar. Maybe you’ve got a good sense of pitch but always wanted to sing songs in the style of Mariah Carey but couldn't hit the notes.
             .blog-slider__item.swiper-slide
                 .blog-slider__img
-                    img.lazyload.grayscale-img(data-src="/images/trumpet.jpg" alt="")
-                .blog-slider__content
-                    .blog-slider__text I am happy to work within your capabilities and can also help with vocal technique's such as increasing range and eliminating strain via breathing exercises and posture. I am always open to learning new styles. I have a professional recording equipment if you would like to record your compositions or covers producing top quality stems suited to industry professionals. 
+                    img.lazyload(data-src="/images/trumpet.jpg" alt="")
+                span.image-content
+                    .blog-slider__content.top-padding
+                        .blog-slider__text I am happy to work within your capabilities and can also help with vocal technique's such as increasing range and eliminating strain via breathing exercises and posture. I am always open to learning new styles. I have a professional recording equipment if you would like to record your compositions or covers producing top quality stems suited to industry professionals. 
             .blog-slider__item.swiper-slide
                 .blog-slider__img
                     span.cw-music Carl Wallis Music
-                    img.lazyload.grayscale-img-alt(data-src="/images/icon_studio.png" alt="")
-                .blog-slider__content
-                    .blog-slider__text I can help you gain the best possible takes along with double tracking and harmonising to execute your songs in the required format prior to mixing and mastering. I am familiar with trinity rock and pop and associated board grades 1 to 8 helping with preparation towards exams if you choose to go down the academic route or just want to play for fun. 
+                    img.lazyload(data-src="/images/icon_studio.png" alt="")
+                span.image-content
+                    .blog-slider__content.top-padding
+                        .blog-slider__text I can help you gain the best possible takes along with double tracking and harmonising to execute your songs in the required format prior to mixing and mastering. I am familiar with trinity rock and pop and associated board grades 1 to 8 helping with preparation towards exams if you choose to go down the academic route or just want to play for fun. 
             .blog-slider__pagination
     .scroll-cert(data-aos=aosanimation, data-aos-duration="1000", data-aos-delay=aosdelay)
-        .blog-slider__title Guitar
+        img.lazyload.watermark(data-src="/images/icon_classic_guitar.png" alt="")
+        .blog-slider__title.mobile-show Guitar
         -guitarCerts
         each cert in guitarCerts
             .certs-grid
@@ -57,10 +63,14 @@ block content
                     != cert.imageElement 
                     != cert.description
         .float-guitar-img
+            span.image-title  Guitar
             img.lazyload.guitar-info-image(data-src="/images/cw_guitar.jpg" alt="")
+            .glow-wrap  
+                .glow
             .lazyload.lazyYT(data-youtube-id="e1XTO-EURCU" data-width="300" data-height="150" data-parameters="autoplay=0&showinfo=0&controls=0" data-src="http://img.youtube.com/vi/e1XTO-EURCU/hqdefault.jpg").header-video
     .scroll-cert(data-aos=aosanimation_alt, data-aos-duration="1000", data-aos-delay=aosdelay)
-        .blog-slider__title Trumpet
+        img.lazyload.watermark.trumpet(data-src="/images/icon_trumpet.png" alt="")
+        .blog-slider__title.mobile-show Trumpet
         -trumpetCerts
         each cert in trumpetCerts
             .certs-grid-alt
@@ -68,10 +78,12 @@ block content
                     != cert.imageElement 
                     != cert.description
         .float-trumpet-img
+            span.image-title  Trumpet
             img.lazyload.trumpet-info-image(data-src="/images/cw_trumpet.jpg" alt="")
             .lazyload.lazyYT(data-youtube-id="aPE8uSOoylM" data-width="300" data-height="150" data-parameters="autoplay=0&showinfo=0&controls=0" data-src="http://img.youtube.com/vi/aPE8uSOoylM/hqdefault.jpg").header-video
     .scroll-cert(data-aos=aosanimation, data-aos-duration="1000", data-aos-delay=aosdelay)
-        .blog-slider__title Vocal
+        img.lazyload.watermark(data-src="/images/icon_vocal.png" alt="")
+        .blog-slider__title.mobile-show Vocal
         -vocalCerts
         each cert in vocalCerts
             .certs-grid
@@ -79,6 +91,7 @@ block content
                     != cert.imageElement 
                     != cert.description
         .float-guitar-img
+            span.image-title  Vocal
             img.lazyload.guitar-info-image(data-src="/images/cw_vocal.jpg" alt="")  
             .lazyload.lazyYT(data-youtube-id="sVLFCgFHbI4" data-width="300" data-height="150" data-parameters="autoplay=0&showinfo=0&controls=0" data-src="http://img.youtube.com/vi/sVLFCgFHbI4/hqdefault.jpg").header-video
     .ytube-video
@@ -100,31 +113,37 @@ block content
     .blog-slider.faq(data-aos=aosanimation, data-aos-duration="1000", data-aos-delay=aosdelay)
         .blog-slider__wrp.swiper-wrapper.faq-translate
             .blog-slider__item.swiper-slide
-                .blog-slider__content
-                    .blog-slider__title What services do you offer?
-                    .blog-slider__text.info-margin I offer lessions in guitar, bass guitar, singing, trumpet, music theory and composition from beginner to advanced. 
+                span.image-content-alt
+                    .blog-slider__content
+                        .blog-slider__title What services do you offer?
+                        .blog-slider__text.info-margin I offer lessions in guitar, bass guitar, singing, trumpet, music theory and composition from beginner to advanced. 
             .blog-slider__item.swiper-slide
-                .blog-slider__content
-                    .blog-slider__title  What services do you offer?
-                    .blog-slider__text.info-margin DBS checked and on the update service. Relevant Public Liability Insurance. I can provide whole class music tuition for years 1 to 6 and provide lesson plans tailored to suit school resources and required learning objectives whether Ukulele, guitar, singing, brass or percussion. 
+                span.image-content-alt
+                    .blog-slider__content
+                        .blog-slider__title  What services do you offer?
+                        .blog-slider__text.info-margin DBS checked and on the update service. Relevant Public Liability Insurance. I can provide whole class music tuition for years 1 to 6 and provide lesson plans tailored to suit school resources and required learning objectives whether Ukulele, guitar, singing, brass or percussion. 
             .blog-slider__item.swiper-slide
-                .blog-slider__content
-                    .blog-slider__title  What services do you offer?
-                    .blog-slider__text.info-margin You are welcome to view my lessons to see if they are right for your school prior to booking a term. I normally split lessons into 40 min sessions for each class but am flexible with regards to timescale if you require PPA Cover. I will always work towards an end goal such as a concert or curriculum based objective. I can raise the standard of music in school and generate interest in both classical and popular music amongst pupils.
+                span.image-content-alt
+                    .blog-slider__content
+                        .blog-slider__title  What services do you offer?
+                        .blog-slider__text.info-margin You are welcome to view my lessons to see if they are right for your school prior to booking a term. I normally split lessons into 40 min sessions for each class but am flexible with regards to timescale if you require PPA Cover. I will always work towards an end goal such as a concert or curriculum based objective. I can raise the standard of music in school and generate interest in both classical and popular music amongst pupils.
             .blog-slider__item.swiper-slide
-                .blog-slider__content.map-transform 
-                    .blog-slider__title What areas do you serve?
-                    .blog-slider__text  
-                        #map
+                span.image-content-alt
+                    .blog-slider__content.map-transform 
+                        .blog-slider__title What areas do you serve?
+                        .blog-slider__text  
+                            #map
             .blog-slider__item.swiper-slide
-                .blog-slider__content
-                    .blog-slider__title How much do your services cost?
-                    .blog-slider__text I offer very competative prices on hourly and half-hour lessions and can usually find a rate to suit any level of experience or budget. 
-                    .blog-slider__text I currently charge £140 per day or £75 per half a day for PPA cover. 
+                span.image-content-alt
+                    .blog-slider__content
+                        .blog-slider__title How much do your services cost?
+                        .blog-slider__text I offer very competative prices on hourly and half-hour lessions and can usually find a rate to suit any level of experience or budget. 
+                        .blog-slider__text I currently charge £140 per day or £75 per half a day for PPA cover. 
             .blog-slider__item.swiper-slide
-                .blog-slider__content
-                    .blog-slider__title What are your hours?
-                    .blog-slider__text I have no set hours or days and am happy to find a time, day and frequency of lessions to suits the individuals needs.
-            .blog-slider__pagination.faq-pagination
+                span.image-content-alt
+                    .blog-slider__content
+                        .blog-slider__title What are your hours?
+                        .blog-slider__text I have no set hours or days and am happy to find a time, day and frequency of lessions to suits the individuals needs.
+            .blog-slider__pagination.top-17em
 
              
