--- a/views/home.pug
+++ b/views/home.pug
@@ -30,7 +30,7 @@ block content
                                 .youtube
                                     i.fab.fa-youtube
                         .blog-slider__text Professional Music Tuition
-                        .blog-slider__text I am a musician / music teacher offering group and individual lessons based in West Yorkshire. With a background in both popular and classical music I have a broad range of knowledge to help you unleash your full musical potential within a realistic timeframe. 
+                        .blog-slider__text.reduced I am a musician / music teacher offering group and individual lessons based in West Yorkshire. With a background in both popular and classical music I have a broad range of knowledge to help you unleash your full musical potential within a realistic timeframe. 
                         .blog-slider__text.hidden Perhaps you’ve always wanted to write simple songs on an acoustic guitar, explore the smouldering gypsy swing of Django Reinheirt or dedicate yourself to complex neoclassical shred guitar. Maybe you’ve got a good sense of pitch but always wanted to sing songs in the style of Mariah Carey but couldn't hit the notes.I am happy to work within your capabilities and can also help with vocal technique's such as increasing range and eliminating strain via breathing exercises and posture. I am always open to learning new styles. I have a professional recording equipment if you would like to record your compositions or covers producing top quality stems suited to industry professionals. I can help you gain the best possible takes along with double tracking and harmonising to execute your songs in the required format prior to mixing and mastering. I am familiar with trinity rock and pop and associated board grades 1 to 8 helping with preparation towards exams if you choose to go down the academic route or just want to play for fun. 
                 
             .blog-slider__item.swiper-slide
@@ -94,6 +94,22 @@ block content
             span.image-title  Vocal
             img.lazyload.guitar-info-image(data-src="/images/cw_vocal.jpg" alt="")  
             .lazyload.lazyYT(data-youtube-id="sVLFCgFHbI4" data-width="300" data-height="150" data-parameters="autoplay=0&showinfo=0&controls=0" data-src="http://img.youtube.com/vi/sVLFCgFHbI4/hqdefault.jpg").header-video
+    .scroll-cert(data-aos=aosanimation_alt, data-aos-duration="1000", data-aos-delay=aosdelay)
+        img.lazyload.watermark.trumpet(data-src="/images/icon_trumpet.png" alt="")
+        .blog-slider__title.mobile-show Whole Class Primary School Tuition
+        .blog-slider__text.ppa  
+            p DBS checked and on the update service.
+            p Relevant Public Liability Insurance.
+            p I can provide whole class music tuition for years 1 to 6 and provide lesson plans tailored to suit school resources and required learning objectives whether Ukulele, guitar, singing, brass or percussion. 
+            p You are welcome to view my lessons to see if they are right for your school prior to booking a term.
+            p I normally split lessons into 40 min sessions for each class but am flexible with regards to timescale if you require PPA Cover.
+            p I will always work towards an end goal such as a concert or curriculum based objective. I can raise the standard of music in school and generate interest in both classical and popular music amongst pupils. 
+            p I currently charge £140 per day or £75 per half a day. 
+            p Contact for more details.
+        .float-trumpet-img
+            span.image-title  Class Tuition
+            img.lazyload.trumpet-info-image(data-src="/images/cw_trumpet.jpg" alt="")
+            .lazyload.lazyYT(data-youtube-id="aPE8uSOoylM" data-width="300" data-height="150" data-parameters="autoplay=0&showinfo=0&controls=0" data-src="http://img.youtube.com/vi/aPE8uSOoylM/hqdefault.jpg").header-video
     .ytube-video
         div.header-video-container
             .col-lg-4(data-aos=aosanimation_alt, data-aos-duration="1000", data-aos-delay=aosdelay)
