--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,7 +32,7 @@ html#main
   body
     <div id="ie-content" class="hidden">
     <div class="cover"> </div> <span class="cover-text">This website does not support Internet Explorer.</span>
-    <span class="cover-desc">To get in contact please click <a href="http://m.me/carlwallismusic/">here</a> </span>
+    <span class="cover-desc">To get in contact please use any of the following <a href="http://m.me/carlwallismusic/">here</a> </span>
     <div class="social-list active ie-fill"><div class="social-container"><div class="floating-buttons" style="left: -2em;"><a href="https://www.facebook.com/carlwallismusic/"><div class="facebook"><i class="fab fa-facebook-f"></i></div></a><a href="http://m.me/carlwallismusic/"><div class="facebook-message"><i class="fas fa-comments"></i></div></a><a href="mailto:c.wallis11@outlook.com?subject=Music Tuition"><div class="email"><i class="fas fa-envelope"></i></div></a><a href="tel:+447884945531"><div class="phone"><i class="fas fa-phone"></i></div></a><a href="https://www.youtube.com/user/carl89uk/videos"><div class="youtube"><i class="fab fa-youtube"></i></div></a></div></div></div> <div class="cover-top"></div> </div>
     </div>
  
