--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -14,7 +14,7 @@
         li.nav-item(class=(title === 'Contact') ? 'active' : undefined)
           a.nav-link(href='/contact') Contact
         span.glyphicon.glyphicon-asterisk.availability 
-            | Place available for 
+            | Places available for 
             !=year
       .social-list(class=(title === 'Contact') ? 'active' : undefined)
         div.social-container
