--- a/views/home.pug
+++ b/views/home.pug
@@ -75,7 +75,7 @@ block content
             img.lazyload.guitar-info-image(data-src="/images/cw_guitar.jpg" alt="")
             .glow-wrap  
                 .glow
-            .lazyload.lazyYT(data-youtube-id="e1XTO-EURCU" data-width="300" data-height="150" data-parameters="autoplay=0&showinfo=0&controls=0" data-src="http://img.youtube.com/vi/e1XTO-EURCU/hqdefault.jpg").header-video
+            .lazyload.lazyYT(data-youtube-id="aPE8uSOoylM" data-width="300" data-height="150" data-parameters="autoplay=0&showinfo=0&controls=0" data-src="http://img.youtube.com/vi/aPE8uSOoylM/hqdefault.jpg").header-video
     
     
     .scroll-cert(data-aos=aosanimation_alt, data-aos-duration="1000", data-aos-delay=aosdelay)
@@ -89,10 +89,10 @@ block content
                     != cert.description
         .float-trumpet-img
             span.image-title  Vocal
-            img.lazyload.trumpet-info-image(data-src="/images/cw_trumpet.jpg" alt="")
+            img.lazyload.trumpet-info-image(data-src="/images/cw_vocal.jpg" alt="")
             .glow-wrap  
                 .glow
-            .lazyload.lazyYT(data-youtube-id="aPE8uSOoylM" data-width="300" data-height="150" data-parameters="autoplay=0&showinfo=0&controls=0" data-src="http://img.youtube.com/vi/aPE8uSOoylM/hqdefault.jpg ").header-video
+            .lazyload.lazyYT(data-youtube-id="e1XTO-EURCU" data-width="300" data-height="150" data-parameters="autoplay=0&showinfo=0&controls=0" data-src="http://img.youtube.com/vi/e1XTO-EURCU/hqdefault.jpg ").header-video
     
     
     .scroll-cert(data-aos=aosanimation, data-aos-duration="1000", data-aos-delay=aosdelay)
@@ -106,7 +106,7 @@ block content
                     != cert.description
         .float-guitar-img
             span.image-title  Trumpet 
-            img.lazyload.guitar-info-image(data-src="/images/cw_vocal.jpg" alt="")  
+            img.lazyload.guitar-info-image(data-src="/images/cw_trumpet.jpg" alt="")  
             .glow-wrap  
                 .glow
             .lazyload.lazyYT(data-youtube-id="sVLFCgFHbI4" data-width="300" data-height="150" data-parameters="autoplay=0&showinfo=0&controls=0" data-src="http://img.youtube.com/vi/sVLFCgFHbI4/hqdefault.jpg").header-video
